package com.jitterted.quizdown;

// is this the "question store"?
public class Quiz {
}
